fix affiliations. add figures in text.

--- a/DataSharing.bib
+++ b/DataSharing.bib
@@ -25,6 +25,7 @@
 	file = {Full Text PDF:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/AQWSWRBH/White et al. - 2013 - Nine simple ways to make it easier to (re)use your.pdf:application/pdf;Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/M4C4ABP7/0.html:text/html}
 }
 
+
 @misc{noauthor_twitter_nodate,
 	title = {Twitter},
 	url = {https://twitter.com/},
@@ -122,7 +123,7 @@
 	Urldate = {2017-02-21},
 	Bdsk-Url-1 = {http://jtleek.com/}}
 
-@misc{_binary_2017,
+@misc{binary_2017,
 	Abstract = {A binary file is a computer file that is not a text file. The term "binary file" is often used as a term meaning "non-text file". Many binary file formats contain parts that can be interpreted as text; for example, some computer document files containing formatted text, such as older Microsoft Word document files, contain the text of the document but also contain formatting information in binary form.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
 	Date-Added = {2017-02-21 20:56:03 +0000},
@@ -138,7 +139,7 @@
 	Year = {2017},
 	Bdsk-Url-1 = {https://en.wikipedia.org/w/index.php?title=Binary_file&oldid=758338324}}
 
-@misc{_json_2017,
+@misc{json_2017,
 	Abstract = {In computing, JSON (canonically pronounced /ˈdʒeɪsən/ JAY-sən; sometimes JavaScript Object Notation) is an open-standard format that uses human-readable text to transmit data objects consisting of attribute--value pairs. It is the most common data format used for asynchronous browser/server communication, largely replacing XML, and is used by AJAX.
 JSON is a language-independent data format. It derives from JavaScript, but as of 2017 many programming languages include code to generate and parse JSON-format data. The official Internet media type for JSON is application/json. JSON filenames use the extension .json.
 Douglas Crockford originally specified the JSON format in the early 2000s; two competing standards, RFC 7159 and ECMA-404, defined it in 2013. The ECMA standard describes only the allowed syntax, whereas the RFC covers some security and interoperability considerations.},
@@ -155,6 +156,7 @@ Douglas Crockford originally specified the JSON format in the early 2000s; two c
 	Urldate = {2017-02-21},
 	Year = {2017},
 	Bdsk-Url-1 = {https://en.wikipedia.org/w/index.php?title=JSON&oldid=766299361}}
+
 
 @misc{_twitter,
 	Date-Added = {2017-02-21 20:56:03 +0000},
